# pwa_forge

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/: Implementation-specification.md  TESTING.md  TROUBLESHOOTING.md  USAGE.md
src/pwa_forge/: __init__.py  cli.py  config.py  registry.py  templates.py  validation.py
src/pwa_forge/commands/: __init__.py  add.py  audit.py  config_cmd.py  doctor.py  edit.py  handler.py  list_apps.py  remove.py  sync.py  userscript.py
src/pwa_forge/templates/: desktop.j2  handler-desktop.j2  handler-script.j2  userscript.j2  wrapper.j2
src/pwa_forge/utils/: __init__.py  logger.py  paths.py
tests/e2e/: __init__.py  test_e2e_system.py
tests/integration/: __init__.py  test_audit_sync_edit_workflow.py  test_handler_workflow.py  test_pwa_lifecycle.py
tests/playwright/: __init__.py  conftest.py  test_handler_integration.py  test_userscript_link_rewrite.py  test_userscript_window_open.py
tests/unit/: test_add_browser_detection.py  test_audit.py  test_cli.py  test_config.py  test_config_cmd.py  test_doctor.py  test_edit.py  test_handler.py  test_logger.py  test_paths.py  test_registry.py  test_sync.py  test_templates.py  test_userscript.py  test_validation.py  test_version.py
