[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pwa-forge"
version = "0.1.0"
description = "Manage Progressive Web Apps as native-feeling Linux launchers."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Pavel Klinger", email = "ja@bigr.cz" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Desktop Environment",
  "Topic :: Utilities",
]
dependencies = [
  "click>=8.1",
  "jinja2>=3.1",
  "platformdirs>=3.0",
  "pyyaml>=6.0",
  "requests>=2.28",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "types-PyYAML>=6.0.12.20240917",
  "types-requests>=2.31.0.10",
]

[project.urls]
Homepage = "https://github.com/bigr/pwa_forge"
Documentation = "https://github.com/bigr/pwa_forge/tree/main/docs"
Source = "https://github.com/bigr/pwa_forge"
Issues = "https://github.com/bigr/pwa_forge/issues"

[project.scripts]
pwa-forge = "pwa_forge.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pwa_forge = ["py.typed"]

